// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages Component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Messages Component renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`Messages Rendering Component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`Messages Rendering Component renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
